fix scrollbar disappearing when reloading

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 html {
   box-sizing: border-box;
   font-size: 16px;
-  overflow: hidden;
+  overflow-y: hidden;
   scroll-behavior: smooth;
   position: relative;
   --accent-color: #fc7a57;
@@ -11,9 +11,6 @@ html {
 *:before,
 *:after {
   box-sizing: inherit;
-}
-body {
-  position: relative;
 }
 body,
 h1,
@@ -114,7 +111,7 @@ a:visited {
   color: black;
 }
 .main-section {
-  height: auto
+  height: auto;
   width: 100vw;
   padding: 2vh;
   font-family: "Zilla Slab Highlight", monospace;
@@ -123,7 +120,8 @@ a:visited {
   justify-content: space-between;
   align-items: center;
 }
-.about,.contact{
+.about,
+.contact {
   height: 100vh;
 }
 .section-nav {
